feat: 상품 전체 목록 조회 구현, 검색기능 구현
- 현재 검색기능에 대해서는 requestbody로 받고 있으나 검색은 requestparam으로 받는게 맞다고 생각이 들어 재설계 할 예정
- 재설계 후, 검색기능에 대한 docs 및 controller 테스트 작성 할 것

--- a/src/docs/asciidoc/api/product/product.adoc
+++ b/src/docs/asciidoc/api/product/product.adoc
@@ -42,3 +42,14 @@ include::{snippets}/product-get/path-parameters.adoc[]
 ==== HTTP Response
 include::{snippets}/product-get/http-response.adoc[]
 include::{snippets}/product-get/response-fields.adoc[]
+
+[[products-get]]
+=== 상품 목록 조회
+
+==== HTTP Request
+include::{snippets}/products-get/http-request.adoc[]
+include::{snippets}/products-get/query-parameters.adoc[]
+
+==== HTTP Response
+include::{snippets}/products-get/http-response.adoc[]
+include::{snippets}/products-get/response-fields.adoc[]
